# homework07

./: my_select.py  pyproject.toml
migrations/versions/: 37a1875e928b_init.py
