[tool.poetry]
name = "homework07"
version = "0.1.0"
description = ""
authors = ["TimurVerba <135266210+TimurVerba@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.23"
psycopg2 = "^2.9.9"
alembic = "^1.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
